--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,14 @@
-.atto-fullscreen {
-    position: relative;
-    height: 100%;
-    width: 100%;
+.atto-fullscreen .block {
+    display: none;
+    visibility: hidden
+}
+
+.atto-fullscreen header {
+    display: none;
+    visibility: hidden
+}
+
+.atto-fullscreen #dock {
+    display: none;
+    visibility: hidden
 }
