--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,10 @@
     visibility: hidden;
 }
 
+.atto-fullscreen .editor_atto_wrap div.editor_atto {
+    z-index: 999;
+}
+
 .CodeMirror-wrap {
     z-index: 999;
 }
