--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,29 @@
-.atto-fullscreen .block {
+.atto-fullscreen .drawer-toggles,
+.atto-fullscreen .drawer,
+.atto-fullscreen header {
     display: none;
     visibility: hidden;
 }
 
+.atto-fullscreen #dock {
+    display: none;
+    visibility: hidden;
+}
+
+.atto-fullscreen .back-to-top {
+    display: none;
+    visibility: hidden;
+}
+
+.atto-fullscreen #nav-drawer {
+    display: none;
+    visibility: hidden;
+}
+
+.atto-fullscreen nav {
+    display: none;
+    visibility: hidden;
+}
 .atto-fullscreen header {
     display: none;
     visibility: hidden;
